Resized the pictures on the home page and the about us page, changed the icon colors on mobile and fixed a bug on the reservations tab

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -24,6 +24,20 @@ hr {
   }
 }
 
+.pizza_deal {
+  display: grid;
+  place-items: center;
+  color: white;
+  font-size: medium;
+  width: 90%;
+  margin-left: 5%;
+  background-color: red;
+  border-radius: 30px;
+  border: red solid 2px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+}
+
 .menu_container {
   display: none;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -119,6 +133,17 @@ label:nth-of-type(1) {
     width: 50%;
     margin-left: 25%;
     padding-bottom: 20px;
+  }
+  .pizza_deal {
+    display: grid;
+    place-items: center;
+    color: white;
+    margin-left: 36%;
+    width: 28%;
+    background-color: red;
+    border: red solid 2px;
+    margin-bottom: 25px;
+    margin-top: 25px;
   }
   hr {
     width: 60vw;
