--- a/css/reservations.scss
+++ b/css/reservations.scss
@@ -46,7 +46,7 @@ input[type="submit"]:hover {
   display: grid;
   place-items: center;
   margin-left: 5%;
-  width: 50%;
+  width: 90%;
   border-radius: 5px;
   background-color: rgb(95, 95, 95);
   margin-top: 20px;
